--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -9,3 +9,13 @@ services:
     ports:
       - 8080:8080
     command: npm run dev
+
+  reverse-proxy:
+    image: caddy:2.6
+    ports:
+      - 443:443
+      - 80:80
+    volumes:
+      - ./services/caddy/Caddyfile:/etc/caddy/Caddyfile
+    depends_on:
+      - app
