--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -8,7 +8,7 @@ services:
       - ./app:/app
     ports:
       - 8080:8080
-    command: npm run dev
+    command: bash -c 'sleep 3 && npm start'
 
   reverse-proxy:
     image: caddy:2.6
@@ -16,6 +16,7 @@ services:
       - 443:443
       - 80:80
     volumes:
+      - ./app/:/srv
       - ./services/caddy/Caddyfile:/etc/caddy/Caddyfile
     depends_on:
       - app
