--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-DATABASE_HOST=
-DATABASE_NAME=
-DATABASE_USERNAME=
-DATABASE_PASSWORD=
-DATABASE_PORT=
+DATABASE_HOST=db
+DATABASE_PORT=5432
+DATABASE_NAME=postgres
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=password
